initial user defined identityFn setup implemented

--- a/manifest.json
+++ b/manifest.json
@@ -21,5 +21,8 @@
       "run_at": "document_start"
     }
   ],
+  "background": {
+    "scripts": ["./src/background.js"]
+  },
    "web_accessible_resources": ["/dist/injected.js"]
 }
